fixed z-index of modal so it will show on top navbar sticky

--- a/src/styles.css
+++ b/src/styles.css
@@ -84,7 +84,7 @@ button:focus {
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 9999;
+  z-index: 99;
   padding-left: 8%;
   padding-right: 8%;
   padding-top: 10px;
